syntax = "proto3";

package bigtable;

option go_package = "final/proto";

service TableService {
  rpc CreateTable (CreateTableRequest) returns (CreateTableResponse);
  rpc DeleteTable (DeleteTableRequest) returns (DeleteTableResponse);
  rpc GetTabletLocation(GetTabletLocationRequest) returns (GetTabletLocationResponse);
}

message CreateTableRequest {
  string table_name = 1;
  repeated ColumnFamily column_families = 2;

  message ColumnFamily {
    string family_name = 1;
    repeated string columns = 2;
  }
}

message CreateTableResponse {
  bool success = 1;
  string message = 2;
}

message DeleteTableRequest {
  string table_name = 1;
}

message DeleteTableResponse {
  bool success = 1;
  string message = 2;
}

message GetTabletLocationRequest {
  string table_name = 1;
  string key = 2; 
}

message GetTabletLocationResponse {
  string tablet_server_address = 1;
  string tablet_start_row = 2;    // Start of the tablet's row range
  string tablet_end_row = 3;      // End of the tablet's row range
}